修改页面显示的背景图片充满整个屏幕，并且控制显示内容字数

--- a/Myblog/src/main/resources/application-dev.yml
+++ b/Myblog/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://47.98.182.243/parking_pay?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+      url: jdbc:mysql://47.98.182.243/myblog?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
       username: root
       password: 123456
       initial-size: 10
