--- a/MyBlog-service/pom.xml
+++ b/MyBlog-service/pom.xml
@@ -8,12 +8,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>myblog-web</artifactId>
+
+    <artifactId>Myblog-service</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.myblog</groupId>
-            <artifactId>Myblog-service</artifactId>
+            <artifactId>Myblog-lts</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 </project>
