--- a/Myblog-lts/pom.xml
+++ b/Myblog-lts/pom.xml
@@ -8,12 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>myblog-web</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.myblog</groupId>
-            <artifactId>Myblog-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+
+    <artifactId>Myblog-lts</artifactId>
+
+
 </project>
